--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -63,7 +63,7 @@
       "header": {
         "type": "header",
         "settings": {
-          "logo": "shopify:\/\/shop_images\/Header_logo_cropped.png",
+          "logo": "shopify:\/\/shop_images\/HOR_LOGO1.png",
           "logo_max_width": "220",
           "northeast_logo": "",
           "northeast_logo_max_width": "450",
