--- a/config.yml
+++ b/config.yml
@@ -8,12 +8,13 @@ development:
   timeout: 600s
 production:
   password: c2ac9a66d730d561e136beafd7588abc
-  theme_id: "184081169"
+  theme_id: "47785082934"
   store: pepsiprint.myshopify.com
   timeout: 600s
-  readonly: true
+  readonly: false
   ignore_files:
     - config/settings_data.json
+  timeout: 600s
 test:
   password: 44005067de10891d9a8308a0ad679b1c
   theme_id: live
